creating my profile

--- a/sample/profile.html
+++ b/sample/profile.html
@@ -6,9 +6,9 @@
 <body>
     <center>
         <div id="my-name"></div>    
-            <h1>My name</h1>
-            <h2>My High school</h2>
-            <h3>My current grade</h3>
+            <h1>Destiny Ryals</h1>
+            <h2>Christiana High Scool</h2>
+            <h3> 11th grade</h3>
         
 
         <div id="about-me">
