--- a/destiny ryals/profile.html
+++ b/destiny ryals/profile.html
@@ -13,7 +13,7 @@
 
         <div id="about-me">
             A little bit about me...
-            <table border="1" bordercolor="black">
+            <table border="1" bordercolor="#58FAF4">
                 <tr>
                     <td>
                         <div id="education">
