--- a/index.html
+++ b/index.html
@@ -7,3 +7,8 @@
         <a href="./Mykeec wiggins/profile.html">Mykeec Wiggins</a>
     </li>
 </ul>
+    <li>
+        <a href="./sample/profile.html">Sample profile</a>
+    </li>
+    </li>
+        <a href="./saliyah.aulder/profile.hmtl">saliyah.audler   
