--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     </li>
 
     <li>
-        <a href="./saliyah.aulder/profile.hmtl">saliyah.audler</a>
+        <a href="./saliyah.aulder/profile.html">saliyah.audler</a>
     </li>
         
+    <li>
+        <a href="./destiny ryals/profile.html">destiny ryals</a>
+    </li>
+    
 
 </ul>
