--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
         <a href="./destiny ryals/profile.html">destiny ryals</a>
     </li>
     
+    <li>
+        <a href="./kente/profile.html">kente</a>
+        </li>
 
 </ul>
