--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     
     <li>
         <a href="./kente/profile.html">kente</a>
-        </li>
-
+    </li>
+ 
+    <li>
+        <a href="./Khalil.Lafate/profile.html">Khalil.lafate</a>
+    </li>
 </ul>
