--- a/saliyah.aulder/profile.html
+++ b/saliyah.aulder/profile.html
@@ -13,7 +13,7 @@
 
         <div id="about-me">
             A little bit about me...
-            <table border="1" bordercolor="#8c8c8c">
+            <table border="1" bordercolor="black">
                 <tr>
                     <td>
                         <div id="education">
